[gd_scene load_steps=12 format=3 uid="uid://dyubfoyd4vxyj"]

[ext_resource type="Script" path="res://Scripts/CombatGUIScripts/ship_gui_scene_wrapper.gd" id="1_sopet"]
[ext_resource type="Texture2D" uid="uid://btjg68do6pthc" path="res://Art/CombatGUIArt/ManualControlHUDArt/bar_starsector.png" id="2_a3nrb"]
[ext_resource type="Texture2D" uid="uid://bw66f1712lt43" path="res://Art/CombatGUIArt/ManualControlHUDArt/flux_pip.png" id="3_kgf5l"]
[ext_resource type="Theme" uid="uid://bka1x3hcxtfcg" path="res://ThemesandFonts/Themes/CombatGUITheme.tres" id="4_88g2j"]
[ext_resource type="Texture2D" uid="uid://doewdp3hp2q71" path="res://Art/CombatGUIArt/ManualControlHUDArt/combatHUDdetail.png" id="5_0ydbx"]
[ext_resource type="Texture2D" uid="uid://d4hbj5jccdfk5" path="res://Art/CombatGUIArt/ship_targetted.png" id="6_6dnka"]
[ext_resource type="Texture2D" uid="uid://cey2s4hiuicmi" path="res://Art/CombatGUIArt/TacticalMapArt/manual_control_indicator.png" id="7_spiim"]

[sub_resource type="Gradient" id="Gradient_nks55"]
offsets = PackedFloat32Array(0.237705, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_47ww1"]
gradient = SubResource("Gradient_nks55")
width = 10

[sub_resource type="Gradient" id="Gradient_lqjnm"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_17qoa"]
gradient = SubResource("Gradient_lqjnm")
width = 10

[node name="CenterCombatHUD" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_sopet")

[node name="ConstantSizedGUI" type="Control" parent="."]
modulate = Color(0.25098, 1, 0, 0.784314)
z_index = 1
anchors_preset = 0

[node name="HardFluxIndicator" type="TextureProgressBar" parent="ConstantSizedGUI"]
physics_interpolation_mode = 0
texture_filter = 1
layout_mode = 0
offset_left = 71.0
offset_top = -80.0
offset_right = 171.0
offset_bottom = -70.0
scale = Vector2(0.75, 0.75)
nine_patch_stretch = true
texture_progress = SubResource("GradientTexture1D_47ww1")

[node name="SoftFluxIndicator" type="TextureProgressBar" parent="ConstantSizedGUI/HardFluxIndicator"]
physics_interpolation_mode = 0
show_behind_parent = true
texture_filter = 1
layout_mode = 0
offset_right = 100.0
offset_bottom = 10.0
nine_patch_stretch = true
texture_progress = SubResource("GradientTexture1D_47ww1")

[node name="BarOutliner" type="TextureRect" parent="ConstantSizedGUI/HardFluxIndicator"]
layout_mode = 0
offset_top = -2.0
offset_right = 102.0
offset_bottom = 12.0
texture = ExtResource("2_a3nrb")
stretch_mode = 2

[node name="FluxPip" type="TextureRect" parent="ConstantSizedGUI/HardFluxIndicator"]
layout_mode = 0
offset_left = -2.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 14.0
texture = ExtResource("3_kgf5l")

[node name="Label" type="Label" parent="ConstantSizedGUI/HardFluxIndicator"]
texture_filter = 1
layout_mode = 0
offset_left = -54.6667
offset_top = -2.66667
offset_right = 4.33333
offset_bottom = 18.3333
theme = ExtResource("4_88g2j")
theme_override_font_sizes/font_size = 10
text = "FLUX"

[node name="HullIntegrityIndicator" type="TextureProgressBar" parent="ConstantSizedGUI"]
physics_interpolation_mode = 0
texture_filter = 1
layout_mode = 0
offset_left = 71.0
offset_top = -63.0
offset_right = 171.0
offset_bottom = -53.0
scale = Vector2(0.75, 0.75)
nine_patch_stretch = true
texture_progress = SubResource("GradientTexture1D_17qoa")

[node name="BarOutLiner2" type="TextureRect" parent="ConstantSizedGUI/HullIntegrityIndicator"]
layout_mode = 0
offset_top = -2.0
offset_right = 104.0
offset_bottom = 12.0
texture = ExtResource("2_a3nrb")
stretch_mode = 2

[node name="Label" type="Label" parent="ConstantSizedGUI/HullIntegrityIndicator"]
texture_filter = 1
layout_mode = 0
offset_left = -54.6667
offset_top = -2.66667
offset_right = 5.33329
offset_bottom = 21.3333
theme = ExtResource("4_88g2j")
theme_override_font_sizes/font_size = 10
text = "HULL"

[node name="IndicatorDecor" type="TextureRect" parent="ConstantSizedGUI"]
self_modulate = Color(1, 1, 1, 0.588235)
layout_mode = 0
offset_top = -48.0
offset_right = 130.0
offset_bottom = -8.0
scale = Vector2(1.2, 1.2)
texture = ExtResource("5_0ydbx")
stretch_mode = 2

[node name="ShipTargetIcon" type="TextureRect" parent="."]
physics_interpolation_mode = 0
texture_filter = 1
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("6_6dnka")

[node name="ManualControlIndicator" type="TextureRect" parent="."]
physics_interpolation_mode = 0
texture_filter = 1
layout_mode = 0
offset_right = 34.0
offset_bottom = 30.0
texture = ExtResource("7_spiim")

[node name="TacticalMapIcon" type="TextureButton" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.588235)
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -36.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_filter = 2
action_mode = 0
button_mask = 0
stretch_mode = 0
